--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@hlolli/root-hash-calculator",
-  "version": "1.0.0-alpha1",
+  "version": "1.0.0-alpha2",
   "description": "Arweave data-root file integrity calculator",
   "main": "index.mjs",
   "scripts": {
-    "test": "node test/test.mjs",
-    "dev:browser": "npx http-server ./browser -i -p 4500"
+    "test": "node test/test.mjs"
   },
   "author": "Hlöðver Sigurðsson",
   "license": "MIT",
